<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoPost</string>
    <string name="action_help">Help</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log Out</string>
    <string name="button_message">Post</string>
    <string name="post_message">Enter a message:</string>
    <string name="cancel">Cancel</string>
    <string name="ok_message">OK</string>
    <string name="sample_greeting">Welcome to the GeoPost App!</string>
    <string name="login_intro">Welcome to GeoPost!</string>
    <string name="help_title">Help</string>
    <string name="login">Log In</string>
    <string name="locked_pin">Locked Pin</string>
    <string name="unlocked_pin">Unlocked Pin</string>
    <string name="posted_pin">Your Pin</string>
    
    <string name="help_message">
        To post a message at your location, click on the "Post" button. 
        To unlock a post, travel to that post\'s location and tap the pin. 
        You can unlock posts within the red circle around your location. 
        Pins outside of this circle will be locked. 
    </string>
    
    <!-- DO NOT COMMIT CHANGES TO THESE PLACEHOLDERS!, YEE BE WARNED
    	 These are used in auto build system
     -->
    <string name="facebook_app_id">248684115322840</string>
    <string name="parse_app_id">GlrWxWCu5mnGFKUeeQIFg9Upt9AwomBDk3t0OKHa</string>
    <string name="parse_client_id">HRRt6k8GzTclufgMCW8RES8LZgQLTTvKBJAnbD5c</string>
    <string name="google_maps_release_key">AIzaSyCnaNizlPjZVKfvOSIJjG5EnAQfM0Lef1U</string>
    <string name="google_maps_debug_key">AIzaSyDfYntxdIueBwbT0OCSSXJ4Za_dzXg2xlk</string>

</resources>
