<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    
    <item android:id="@+id/sort_options"
        android:title="@string/action_sort"
       	android:showAsAction="ifRoom"
     	android:actionViewClass="android.widget.Spinner" />
    
    <item 
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_profile"/>
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>
